# MockProject_032026_Nhom9

./: .gitignore  QuanLyVanPhongCongChung.slnx  README.md  ToDoListCRUDSample.slnx  database.py  dump_reqs.py  main.py  notary.db  package-lock.json  package.json  requirements.txt  test.db
Python/: main.py
ToDoList.Api/: Program.cs  ToDoList.Api.csproj  ToDoList.Api.http  appsettings.json
ToDoList.Repository/: DependencyInjection.cs  ToDoList.Repository.csproj
ToDoList.Service/: DependencyInjection.cs  ToDoList.Service.csproj
act_finalization/: requirements.txt
app/: main.py
core/: database.py  dependencies.py  security.py
python/: .gitignore  API_DOCUMENTATION.md  DATABASE_SCHEMA.md  main.py  pyproject.toml
python/app/: main.py
python/app/api/v1/: router.py
python/app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  logger.py  schemas.py  security.py
python/app/modules/acts/: __init__.py  models.py  router.py  schemas.py  services.py
python/app/modules/journal_entries/: __init__.py  models.py  router.py  schemas.py  services.py
python/app/modules/media/: __init__.py  router.py  services.py
python/app/modules/notaries/: __init__.py  models.py
python/app/modules/notary_acts/: schemas.py  schemas_setup.py
python/app/modules/references/: __init__.py  models.py  router.py  schemas.py  services.py
python/app/modules/roles/: __init__.py  models.py  schemas.py  services.py
python/app/modules/users/: __init__.py  models.py  router.py  schemas.py  services.py
python/scripts/: seed_journal.py
routers/: user_router.py
(+285 files in other folders)
